[package]
name = "pmem"
version = "0.1.0"
authors = ["Valentin Obst"]
edition = "2021"
description = "Command line application for loading and using the linpmem driver."
readme = "README.md"
repository = "https://github.com/vobst/linpmem-cli"
license = "MIT"
keywords = ["linpmem", "forensics", "physical memory", "memory acquisition"]
categories = ["command-line-utilities", "hardware-support", "os::linux-apis"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pmem"
path = "src/lib.rs"

[[bin]]
name = "pmem"
path = "src/bin/pmem.rs"

[[bin]]
name = "loader"
path = "src/bin/loader.rs"

[dependencies]
clap = { version = "4.3.21", features = ["derive"] }
nix = { version = "0.26.2", features = ["ioctl", "kmod"] }
num-traits = "0.2.16"
