[package]
name = "pmem"
version = "0.1.0"
authors = ["Valentin Obst"]
edition = "2021"
description = "Command line application for loading and using the linpmem driver."
readme = "README.md"
repository = "https://github.com/vobst/linpmem-cli"
license = "MIT"
keywords = ["linpmem", "forensics", "physical memory", "memory acquisition"]
categories = ["command-line-utilities", "hardware-support", "os::linux-apis"]
build = "build.rs"

[lib]
name = "pmem"
path = "src/lib.rs"
crate-type = ["lib", "staticlib"]

[[bin]]
name = "pmem"
path = "src/bin/pmem.rs"

[[bin]]
name = "loader"
path = "src/bin/loader.rs"

[profile.release]
strip = "symbols"

[dependencies]
clap = { version = "4.3.21", features = ["derive"] }
nix = { version = "0.26.2", features = ["ioctl", "kmod"] }
num-traits = "0.2.16"

[build-dependencies]
cbindgen = "0.25.0"
